PR/41111: Ed Ravin: ping -R gives misleading error when remote side doesn't support record route Deal with source route and record route specially giving a meaningful error message. Pullup to 5.0?